--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           ">
           <div class="col-1">
                 <h4>IMPERDIVEL !</h4>
-                <h1>Seu sonho esta <br> a <span>distancia</span> de um clique </h1>
+                <h1>Seu sonho está <br> à <span>distancia</span> de um clique </h1>
                 <p>Civic 2011 4 portas flex, documentação em dia, preço abaixo da tabela FIPE ! </p>
             <div class="button">
                 <a href="Anuncios/anunciocivic.html" class="lojasBtn"><i class='bx bx-right-arrow-alt'></i>Orçamento</a>
@@ -103,7 +103,7 @@
           ">
           <div class="col-1">
             <h4>IMPERDIVEL !</h4>
-                <h1>Seu sonho esta <br> a <span>distancia</span> de um clique </h1>
+                <h1>Seu sonho está <br> à <span>distancia</span> de um clique </h1>
                 <p>Corolla XEI 2.0 flex 4 portas branca, documentação em dia, preço abaixo da tabela FIPE ! </p>
             <div class="button">
                 <a href="Anuncios/anunciocorolla.html" class="lojasBtn"><i class='bx bx-right-arrow-alt'></i>Orçamento</a>
@@ -122,7 +122,7 @@
           ">
           <div class="col-1">
             <h4>IMPERDIVEL !</h4>
-                <h1>Seu sonho esta <br> a <span>distancia</span> de um clique </h1>
+                <h1>Seu sonho está <br> à <span>distancia</span> de um clique </h1>
                 <p>Polo MSI 2021 4 portas branca, documentação em dia, preço abaixo da tabela FIPE ! </p>
                 <div class="button">
                     <a href="Anuncios/anunciopolo.html" class="lojasBtn"><i class='bx bx-right-arrow-alt'></i>Orçamento</a>
