--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           background-position: center;
           ">
           <div class="col-1">
-                <h4>IMPERDIVEL !</h4>
+                <h4>IMPERDÍVEL !</h4>
                 <h1>Seu sonho está <br> à <span>distancia</span> de um clique </h1>
                 <p>Civic 2011 4 portas flex, documentação em dia, preço abaixo da tabela FIPE ! </p>
             <div class="button">
@@ -102,9 +102,9 @@
           background-position: center;
           ">
           <div class="col-1">
-            <h4>IMPERDIVEL !</h4>
+            <h4>IMPERDÍVEL !</h4>
                 <h1>Seu sonho está <br> à <span>distancia</span> de um clique </h1>
-                <p>Corolla XEI 2.0 flex 4 portas branca, documentação em dia, preço abaixo da tabela FIPE ! </p>
+                <p>Corolla XEI 2.0 flex 4 portas branco, documentação em dia, preço abaixo da tabela FIPE ! </p>
             <div class="button">
                 <a href="Anuncios/anunciocorolla.html" class="lojasBtn"><i class='bx bx-right-arrow-alt'></i>Orçamento</a>
                 <a href="https://wa.me/5547991711988" class="sobreBtn"><i class='bx bx-right-arrow-alt'></i>WhatsApp</a>
@@ -121,7 +121,7 @@
           background-position: center;
           ">
           <div class="col-1">
-            <h4>IMPERDIVEL !</h4>
+            <h4>IMPERDÍVEL !</h4>
                 <h1>Seu sonho está <br> à <span>distancia</span> de um clique </h1>
                 <p>Polo MSI 2021 4 portas branca, documentação em dia, preço abaixo da tabela FIPE ! </p>
                 <div class="button">
