--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 <!--fim slide-->
 <!--inicios veiculos-->
 <section class="carrosRecentes">
-    <h4><i class="bx bxs-car"></i> Veiculos Recém-chegados</h4>
+    <h4><i class="bx bxs-car"></i> Veículos Recém-chegados</h4>
     <h1>Veja novos<span> Veiculos</span></h1>
     <div class="cr-linha">
         <div class="cr-col"><!-- uno 2013 ok-->
