--- a/index.html
+++ b/index.html
@@ -534,8 +534,8 @@
     </div>
     <div class="col-4">
         <h4><i class='bx bx-car'></i>Sobre nós</h4>
-        <h3>O maior mercado <span>de<br> leilao</span> do brasil</h3>
-        <p class="text">A MR Leilõs preza pela lealdade e transparencia com nossos clientes, realizando um atendimento especializado com cada um e nossos clientes .</p>
+        <h3>O maior mercado <span>de<br> leilão</span> do brasil</h3>
+        <p class="text">A MR Leilõs preza pela lealdade e transparência com nossos clientes, realizando um atendimento especializado com cada um e nossos clientes .</p>
         <p class="p1"><i class='bx bxs-chevron-down-circle'></i>Encontre o seu novo carro aqui</p>
         <p class="p1"><i class='bx bxs-chevron-down-circle'></i>Tenha ofertas exclusivas</p>
         <p class="p1"><i class='bx bxs-chevron-down-circle'></i>Receba propostas diretamente no seu WhatsApp</p>
@@ -549,7 +549,7 @@
     <div class="contador-box">
         <img src="assets/img/contador/1.jpg" alt="">
         <span class="numero" msflix-c-valor="777">000</span>
-        <span class="text"><i class='bx bx-plus'></i> Veiculos Cadastrados</span>
+        <span class="text"><i class='bx bx-plus'></i> Veículos Cadastrados</span>
     </div>
     <div class="contador-box">
         <img src="assets/img/contador/2.jpg" alt="">
@@ -638,7 +638,7 @@
             </div>
         </div>
         <div class="col-2">
-            <h4><i class="bx bxs-car"></i>Poque comprar conosco ?</h4>
+            <h4><i class="bx bxs-car"></i>Porque comprar conosco ?</h4>
             <h3>Nos dedicamos a <span> fornecer um serviço de qualidade </span> com os melhores preços</h3>
             
             <figure>
@@ -725,7 +725,7 @@
           <div class="swiper-slide slide">
             <img src="assets/img/depoimentos/WhatsApp Image 2023-07-22 at 14.56.59 (1).jpeg" alt=""> 
             <h5>Paulo Fraga</h5>
-            <span>Joazeiro, Bahia</span>
+            <span>Juazeiro, Bahia</span>
             <p> 
                 <cite>
                        Muito obrigado 
@@ -791,7 +791,7 @@
             <span><i class='bx bxs-business'></i>07.445.412/0001-84</span>
         </div>
         <div class="rodape-col">
-            <h5>informacoes</h5>
+            <h5>informações</h5>
             <a href="#sobreNos" title=""><i class="bx bx-chevron-right"></i> Sobre nós</a>            
             <a href="manutencao.html" title=""><i class="bx bx-chevron-right"></i> Blog</a>            
             <a href="manutencao.html" title=""><i class="bx bx-chevron-right"></i> Videos</a>            
