--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <div class="col-1">
             <h4>IMPERDÍVEL !</h4>
                 <h1>Seu sonho está <br> à <span>distancia</span> de um clique </h1>
-                <p>Polo MSI 2021 4 portas branca, documentação em dia, preço abaixo da tabela FIPE ! </p>
+                <p>Polo MSI 2021 4 portas branco, documentação em dia, preço abaixo da tabela FIPE ! </p>
                 <div class="button">
                     <a href="Anuncios/anunciopolo.html" class="lojasBtn"><i class='bx bx-right-arrow-alt'></i>Orçamento</a>
                     <a href="https://wa.me/5547991711988" class="sobreBtn"><i class='bx bx-right-arrow-alt'></i>WhatsApp</a>
@@ -142,7 +142,7 @@
 <!--inicios veiculos-->
 <section class="carrosRecentes">
     <h4><i class="bx bxs-car"></i> Veículos Recém-chegados</h4>
-    <h1>Veja novos<span> Veiculos</span></h1>
+    <h1>Veja novos<span> Veículos</span></h1>
     <div class="cr-linha">
         <div class="cr-col"><!-- uno 2013 ok-->
             <div class="img-cr">
@@ -535,7 +535,7 @@
     <div class="col-4">
         <h4><i class='bx bx-car'></i>Sobre nós</h4>
         <h3>O maior mercado <span>de<br> leilão</span> do brasil</h3>
-        <p class="text">A MR Leilõs preza pela lealdade e transparência com nossos clientes, realizando um atendimento especializado com cada um e nossos clientes .</p>
+        <p class="text">A MR Leilõs preza pela lealdade e transparência com nossos clientes, realizando um atendimento especializado com cada um de nossos clientes .</p>
         <p class="p1"><i class='bx bxs-chevron-down-circle'></i>Encontre o seu novo carro aqui</p>
         <p class="p1"><i class='bx bxs-chevron-down-circle'></i>Tenha ofertas exclusivas</p>
         <p class="p1"><i class='bx bxs-chevron-down-circle'></i>Receba propostas diretamente no seu WhatsApp</p>
