--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
           <div class="col-2">
             <img src="assets/img/slide/civic1-removebg-preview.png" alt="">
           </div>
+              <div class="col-3">
+            <p><i class='bx bxs-circle'></i>Entregas com <span>seguro de envio </span> para todo o brasil <i class='bx bxs-truck'></i></p>
+            <p><i class='bx bxs-circle'></i>Veiculos <span>recuperados</span> de financiamento <i class='bx bxs-bank'></i></p>
+         </div>
           </div>
           <div class="swiper-slide slide" 
           style="background: linear-gradient(to bottom, rgba(0,0,0,0.8), rgba(0,0,0,0.8),  rgba(255, 255, 255, 0.932)), url(assets/img/slide/bg-slide-2.jpg);
@@ -113,6 +117,10 @@
           <div class="col-2">
             <img src="assets/img/slide/corollacapa-removebg-preview.png" alt="">
           </div>
+              <div class="col-3">
+            <p><i class='bx bxs-circle'></i>Entregas com <span>seguro de envio </span> para todo o brasil <i class='bx bxs-truck'></i></p>
+            <p><i class='bx bxs-circle'></i>Veiculos <span>recuperados</span> de financiamento <i class='bx bxs-bank'></i></p>
+         </div>
           </div>
           <div class="swiper-slide slide" 
           style="background: linear-gradient(to bottom, rgba(0,0,0,0.8), rgba(0,0,0,0.8),  rgb(255, 255, 255)), url(assets/img/slide/bg-slide-3.jpg);
@@ -132,6 +140,10 @@
           <div class="col-2">
             <img src="assets/img/slide/polocapa-removebg-preview.png" alt="">
           </div>
+              <div class="col-3">
+            <p><i class='bx bxs-circle'></i>Entregas com <span>seguro de envio </span> para todo o brasil <i class='bx bxs-truck'></i></p>
+            <p><i class='bx bxs-circle'></i>Veiculos <span>recuperados</span> de financiamento <i class='bx bxs-bank'></i></p>
+         </div>
         </div>
       </div>
       <div class="swiper-button-next"></div>
