--- a/Anuncios/anunciofox.html
+++ b/Anuncios/anunciofox.html
@@ -251,7 +251,7 @@
             <h5>Suporte</h5>
             <a href="../manutencao.html" title=""><i class="bx bx-chevron-right"></i> Perguntas</a>            
             <a href="../manutencao.html" title=""><i class="bx bx-chevron-right"></i> Revendas</a>                        
-            <a href="../manutencao.html" title=""><i class="bx bx-chevron-right"></i> Miha Conta</a>            
+            <a href="../manutencao.html" title=""><i class="bx bx-chevron-right"></i> Minha Conta</a>            
             <a href="../contato.html" title=""><i class="bx bx-chevron-right"></i> Fale Conosco</a>              
         </div>
         <div class="rodape-col">
