--- a/contato.html
+++ b/contato.html
@@ -49,7 +49,7 @@
     <li><a href="empresa.html" title="" >Empresa <i class='bx bxs-chevron-down'></i></a>
         <ul class="menuSub">
             <li><a href="empresa.html" title="">Termos de Serviços</a></li>
-            <li><a href="empresa.html" title="">Politica de Privacidade</a></li>
+            <li><a href="empresa.html" title="">Política de Privacidade</a></li>
         </ul>
     </li>
     <li><a href="leilao.html" title="">Nosso Leilão <i class='bx bxs-chevron-down'></i> </a>
@@ -113,8 +113,8 @@
             <h5>informacoes</h5>
             <a href="leilao.html" title=""><i class="bx bx-chevron-right"></i> Sobre nós</a>            
             <a href="manutencao.html" title=""><i class="bx bx-chevron-right"></i> Blog</a>            
-            <a href="manutencao.html" title=""><i class="bx bx-chevron-right"></i> Videos</a>            
-            <a href="empresa.html" title=""><i class="bx bx-chevron-right"></i> Politica De Privacidade</a>            
+            <a href="manutencao.html" title=""><i class="bx bx-chevron-right"></i> Vídeos</a>            
+            <a href="empresa.html" title=""><i class="bx bx-chevron-right"></i> Política De Privacidade</a>            
             <a href="empresa.html" title=""><i class="bx bx-chevron-right"></i> Termos de serviço</a>                       
         </div>
         <div class="rodape-col">
@@ -134,7 +134,7 @@
         </div>
     </div>
     <div class="rodape-direitos">
-        <p>&copy; desde 2010 <span>MRleiloes</span> Todos os direitos Reservados </p>
+        <p>&copy; <span>leilão</span> Todos os direitos Reservados </p>
         <div class="rodape-redes">
             <i class='bx bxl-facebook'></i>
             <i class='bx bxl-instagram'></i>
