--- a/empresa.html
+++ b/empresa.html
@@ -49,7 +49,7 @@
     <li><a href="#" title="" class="active">Empresa <i class='bx bxs-chevron-down'></i></a>
         <ul class="menuSub">
             <li><a href="#termos" title="">Termos de Serviços</a></li>
-            <li><a href="#politica" title="">Politica de Privacidade</a></li>
+            <li><a href="#politica" title="">Política de Privacidade</a></li>
         </ul>
     </li>
     <li><a href="leilao.html" title="">Nosso Leilão <i class='bx bxs-chevron-down'></i> </a>
@@ -154,18 +154,18 @@
             <span><i class='bx bxs-business'></i>07.445.412/0001-84</span>
         </div>
         <div class="rodape-col">
-            <h5>informacoes</h5>
+            <h5>informacões</h5>
             <a href="leilao.html" title=""><i class="bx bx-chevron-right"></i> Sobre nós</a>            
             <a href="manutencao.html" title=""><i class="bx bx-chevron-right"></i> Blog</a>            
-            <a href="manutencao.html" title=""><i class="bx bx-chevron-right"></i> Videos</a>            
-            <a href="#politica" title=""><i class="bx bx-chevron-right"></i> Politica De Privacidade</a>            
+            <a href="manutencao.html" title=""><i class="bx bx-chevron-right"></i> Vídeos</a>            
+            <a href="#politica" title=""><i class="bx bx-chevron-right"></i> Política De Privacidade</a>            
             <a href="#termos" title=""><i class="bx bx-chevron-right"></i> Termos de serviço</a>                       
         </div>
         <div class="rodape-col">
             <h5>Suporte</h5>
             <a href="manutencao.html" title=""><i class="bx bx-chevron-right"></i> Perguntas</a>            
             <a href="manutencao.html" title=""><i class="bx bx-chevron-right"></i> Revendas</a>                     
-            <a href="manutencao.html" title=""><i class="bx bx-chevron-right"></i> Miha Conta</a>            
+            <a href="manutencao.html" title=""><i class="bx bx-chevron-right"></i> Minha Conta</a>            
             <a href="contato.html" title=""><i class="bx bx-chevron-right"></i> Fale Conosco</a>              
         </div>
         <div class="rodape-col">
@@ -178,7 +178,7 @@
         </div>
     </div>
     <div class="rodape-direitos">
-        <p>&copy; <span>MRleiloes</span> Todos os direitos Reservados </p>
+        <p>&copy; <span>Leilão</span> Todos os direitos Reservados </p>
         <div class="rodape-redes">
             <i class='bx bxl-facebook'></i>
             <i class='bx bxl-instagram'></i>
