--- a/leilao.html
+++ b/leilao.html
@@ -49,7 +49,7 @@
     <li><a href="empresa.html" title="" >Empresa <i class='bx bxs-chevron-down'></i></a>
         <ul class="menuSub">
             <li><a href="empresa.html" title="">Termos de Serviços</a></li>
-            <li><a href="empresa.html" title="">Politica de Privacidade</a></li>
+            <li><a href="empresa.html" title="">Política de Privacidade</a></li>
         </ul>
     </li>
     <li><a href="leilao.html" title="" class="active">Nosso Leilão <i class='bx bxs-chevron-down'></i> </a>
@@ -225,11 +225,11 @@
             <span><i class='bx bxs-business'></i>07.445.412/0001-84</span>
         </div>
         <div class="rodape-col">
-            <h5>informacoes</h5>
+            <h5>informações</h5>
             <a href="leilao.html" title=""><i class="bx bx-chevron-right"></i> Sobre nós</a>            
             <a href="manutencao.html" title=""><i class="bx bx-chevron-right"></i> Blog</a>            
-            <a href="manutencao.html" title=""><i class="bx bx-chevron-right"></i> Videos</a>            
-            <a href="empresa.html" title=""><i class="bx bx-chevron-right"></i> Politica De Privacidade</a>            
+            <a href="manutencao.html" title=""><i class="bx bx-chevron-right"></i> Vídeos</a>            
+            <a href="empresa.html" title=""><i class="bx bx-chevron-right"></i> Política De Privacidade</a>            
             <a href="empresa.html" title=""><i class="bx bx-chevron-right"></i> Termos de serviço</a>                       
         </div>
         <div class="rodape-col">
@@ -249,7 +249,7 @@
         </div>
     </div>
     <div class="rodape-direitos">
-        <p>&copy; desde 2010 <span>MRLeiloes</span> Todos os direitos Reservados </p>
+        <p>&copy; <span>Leilão</span> Todos os direitos Reservados </p>
         <div class="rodape-redes">
             <i class='bx bxl-facebook'></i>
             <i class='bx bxl-instagram'></i>
