--- a/manutencao.html
+++ b/manutencao.html
@@ -49,7 +49,7 @@
     <li><a href="empresa.html" title="" >Empresa <i class='bx bxs-chevron-down'></i></a>
         <ul class="menuSub">
             <li><a href="empresa.html" title="">Termos de Serviços</a></li>
-            <li><a href="empresa.html" title="">Politica de Privacidade</a></li>
+            <li><a href="empresa.html" title="">Política de Privacidade</a></li>
         </ul>
     </li>
     <li><a href="leilao.html" title="">Nosso Leilão <i class='bx bxs-chevron-down'></i> </a>
