--- a/manutencao.html
+++ b/manutencao.html
@@ -104,11 +104,11 @@
             <span><i class='bx bxs-business'></i>07.445.412/0001-84</span>
         </div>
         <div class="rodape-col">
-            <h5>informacoes</h5>
+            <h5>informações</h5>
             <a href="leilao.html" title=""><i class="bx bx-chevron-right"></i> Sobre nós</a>            
             <a href="#" title=""><i class="bx bx-chevron-right"></i> Blog</a>            
-            <a href="#" title=""><i class="bx bx-chevron-right"></i> Videos</a>            
-            <a href="empresa.html" title=""><i class="bx bx-chevron-right"></i> Politica De Privacidade</a>            
+            <a href="#" title=""><i class="bx bx-chevron-right"></i> Vídeos</a>            
+            <a href="empresa.html" title=""><i class="bx bx-chevron-right"></i> Política De Privacidade</a>            
             <a href="empresa.html" title=""><i class="bx bx-chevron-right"></i> Termos de serviço</a>                       
         </div>
         <div class="rodape-col">
@@ -129,7 +129,7 @@
         </div>
     </div>
     <div class="rodape-direitos">
-        <p>&copy;  <span>MRLeiloes</span> Todos os direitos Reservados </p>
+        <p>&copy;  <span>Leilão</span> Todos os direitos Reservados </p>
         <div class="rodape-redes">
             <i class='bx bxl-facebook'></i>
             <i class='bx bxl-instagram'></i>
