--- a/manutencao.html
+++ b/manutencao.html
@@ -83,7 +83,7 @@
             para maior comodidade de nossos clientes,
             desde jé agradecemos a compreensão ! 
         </p>
-        <p class="text">Entre em contato para mais informaçoes, a equipe MRLeiloes agradece !</p>
+        <p class="text">Entre em contato para mais informações, a equipe MRLeilões agradece !</p>
         <div class="button">
             <a href="https://wa.me/554185376419" class="cr-link">WhatsApp</a>
         </div>
