--- a/obrigado.html
+++ b/obrigado.html
@@ -49,7 +49,7 @@
     <li><a href="empresa.html" title="" >Empresa <i class='bx bxs-chevron-down'></i></a>
         <ul class="menuSub">
             <li><a href="empresa.html" title="">Termos de Serviços</a></li>
-            <li><a href="empresa.html" title="">Politica de Privacidade</a></li>
+            <li><a href="empresa.html" title="">Política de Privacidade</a></li>
         </ul>
     </li>
     <li><a href="leilao.html" title="">Nosso Leilão <i class='bx bxs-chevron-down'></i> </a>
@@ -77,7 +77,7 @@
     <div class="obrigadoaux">
         <img src="assets/img/logo/logoA.jpg" alt="">
         <h4>Agradecemos o seu contato !</h4>
-        <p class="text">Muito obrigado pelo seu contato prezado cliente MR, assim que possivel retornaremos o contato</p>
+        <p class="text">Muito obrigado pelo seu contato prezado cliente MR, assim que possível retornaremos o contato</p>
         <div class="button"><a href="index.html" class="cr-link">Voltar a pagina inicial</a></div>
     </div>
 </section>
@@ -96,11 +96,11 @@
             <span><i class='bx bxs-business'></i>07.445.412/0001-84</span>
         </div>
         <div class="rodape-col">
-            <h5>informacoes</h5>
+            <h5>informações</h5>
             <a href="leilao.html" title=""><i class="bx bx-chevron-right"></i> Sobre nós</a>            
             <a href="manutencao.html" title=""><i class="bx bx-chevron-right"></i> Blog</a>            
-            <a href="manutencao.html" title=""><i class="bx bx-chevron-right"></i> Videos</a>            
-            <a href="leilao.html" title=""><i class="bx bx-chevron-right"></i> Politica De Privacidade</a>            
+            <a href="manutencao.html" title=""><i class="bx bx-chevron-right"></i> Vídeos</a>            
+            <a href="leilao.html" title=""><i class="bx bx-chevron-right"></i> Política De Privacidade</a>            
             <a href="leilao.html" title=""><i class="bx bx-chevron-right"></i> Termos de serviço</a>                       
         </div>
         <div class="rodape-col">
@@ -121,7 +121,7 @@
         </div>
     </div>
     <div class="rodape-direitos">
-        <p>&copy; desde 2010 <span>MRleiloes</span> Todos os direitos Reservados </p>
+        <p>&copy; <span>Leilão</span> Todos os direitos Reservados </p>
         <div class="rodape-redes">
             <i class='bx bxl-facebook'></i>
             <i class='bx bxl-instagram'></i>
