--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           </div>
               <div class="col-3">
             <p><i class='bx bxs-circle'></i>Entregas com <span>seguro de envio </span> para todo o brasil <i class='bx bxs-truck'></i></p>
-            <p><i class='bx bxs-circle'></i>Veiculos <span>recuperados</span> de financiamento <i class='bx bxs-bank'></i></p>
+            <p><i class='bx bxs-circle'></i>Veículos <span>recuperados</span> de financiamento <i class='bx bxs-bank'></i></p>
          </div>
           </div>
           <div class="swiper-slide slide" 
@@ -119,7 +119,7 @@
           </div>
               <div class="col-3">
             <p><i class='bx bxs-circle'></i>Entregas com <span>seguro de envio </span> para todo o brasil <i class='bx bxs-truck'></i></p>
-            <p><i class='bx bxs-circle'></i>Veiculos <span>recuperados</span> de financiamento <i class='bx bxs-bank'></i></p>
+            <p><i class='bx bxs-circle'></i>Veículos <span>recuperados</span> de financiamento <i class='bx bxs-bank'></i></p>
          </div>
           </div>
           <div class="swiper-slide slide" 
@@ -142,7 +142,7 @@
           </div>
               <div class="col-3">
             <p><i class='bx bxs-circle'></i>Entregas com <span>seguro de envio </span> para todo o brasil <i class='bx bxs-truck'></i></p>
-            <p><i class='bx bxs-circle'></i>Veiculos <span>recuperados</span> de financiamento <i class='bx bxs-bank'></i></p>
+            <p><i class='bx bxs-circle'></i>Veículos <span>recuperados</span> de financiamento <i class='bx bxs-bank'></i></p>
          </div>
         </div>
       </div>
