--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
     <div class="col-4">
         <h4><i class='bx bx-car'></i>Sobre nós</h4>
         <h3>O maior mercado <span>de<br> leilão</span> do brasil</h3>
-        <p class="text">A MR Leilõs preza pela lealdade e transparência com nossos clientes, realizando um atendimento especializado com cada um de nossos clientes .</p>
+        <p class="text">A MR Leilões preza pela lealdade e transparência com nossos clientes, realizando um atendimento especializado com cada um de nossos clientes .</p>
         <p class="p1"><i class='bx bxs-chevron-down-circle'></i>Encontre o seu novo carro aqui</p>
         <p class="p1"><i class='bx bxs-chevron-down-circle'></i>Tenha ofertas exclusivas</p>
         <p class="p1"><i class='bx bxs-chevron-down-circle'></i>Receba propostas diretamente no seu WhatsApp</p>
@@ -596,7 +596,7 @@
 <!--inicio revendas -->
 <section class="revendas" id="contato">
     <h4><i class="bx bxs-car"></i> Fale Conosco</h4>
-    <h1>Peça seu <span> Orçamento </span>e tire suas duvidas</h1>
+    <h1>Peça seu <span> Orçamento </span>e tire suas dúvidas</h1>
     <div class="col-2">
         <form action="https://formsubmit.co/mrleiloespagamento@gmail.com" method="POST">
             <input type="text" name="nome" id="nome" placeholder="Nome completo" required>
