--- a/Anuncios/anunciosaveiro.html
+++ b/Anuncios/anunciosaveiro.html
@@ -140,7 +140,7 @@
             
         </div>
         <div class="col-1">
-            <h5>Informaçoes</h5>
+            <h5>Informações</h5>
             <div class="anuncio-linha">
                 <div class="anuncio-box">
                     <i class='bx bx-car'></i>
