--- a/manutencao.html
+++ b/manutencao.html
@@ -75,7 +75,7 @@
 <!--inicio manutencao-->
 <section class="obrigadop">
     <div class="obrigadoaux">
-        <img src="assets/img/logo/logoA.jpg" alt="">
+        <img src="assets/img/logo/logopa-removebg-preview.png" alt="">
         <h4>Aviso Importante !</h4>
         <p class="text">
             Prezado cliente MR,
@@ -85,7 +85,7 @@
         </p>
         <p class="text">Entre em contato para mais informações, a equipe MRLeilões agradece !</p>
         <div class="button">
-            <a href="https://wa.me/554185376419" class="cr-link">WhatsApp</a>
+            <a href="https://wa.me/5547991711988" class="cr-link">WhatsApp</a>
         </div>
     </div>
 </section>
