--- a/obrigado.html
+++ b/obrigado.html
@@ -75,7 +75,7 @@
 <!--inicio agradecimento-->
 <section class="obrigadop">
     <div class="obrigadoaux">
-        <img src="assets/img/logo/logoA.jpg" alt="">
+        <img src="assets/img/logo/logopa-removebg-preview.png" alt="">
         <h4>Agradecemos o seu contato !</h4>
         <p class="text">Muito obrigado pelo seu contato prezado cliente MR, assim que possível retornaremos o contato</p>
         <div class="button"><a href="index.html" class="cr-link">Voltar a pagina inicial</a></div>
