--- a/manutencao.html
+++ b/manutencao.html
@@ -75,7 +75,7 @@
 <!--inicio manutencao-->
 <section class="obrigadop">
     <div class="obrigadoaux">
-        <img src="assets/img/logo/logopa-removebg-preview.png" alt="">
+        <img src="assets/img/logo/logopa.jpg" alt="">
         <h4>Aviso Importante !</h4>
         <p class="text">
             Prezado cliente MR,
