--- a/empresa.html
+++ b/empresa.html
@@ -76,7 +76,7 @@
 <section class="politicaP" id="politica">
     <div class="politicaaux">
         <h4><i class="bx bxs-car"></i> Conheça mais sobre nossa empresa</h4>
-        <h1><i class='bx bx-shield-quarter'></i> Politicas de <span> Privacidade</span></h1>
+        <h1><i class='bx bx-shield-quarter'></i> Políticas de <span> Privacidade</span></h1>
     </div>
     <div class="textoPolitica">
         <h4> Coleta de Informações: </h4>
